fix story title is not aligned, close #42

--- a/src/styles/widget.styl
+++ b/src/styles/widget.styl
@@ -26,6 +26,11 @@
         padding-top: 0.5em
         padding-bottom: 0.5em
 
+    &-title
+        display: flex
+        align-items: center
+
+
     &.collapsed > &-body
         display: none;
 
